--- a/apigateway/myeurekaserver/pom.xml
+++ b/apigateway/myeurekaserver/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.2.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.citi</groupId>
-	<artifactId>cloud-config</artifactId>
+	<groupId>com.example</groupId>
+	<artifactId>myeurekaserver</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>cloud-config</name>
+	<name>myeurekaserver</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -20,7 +20,10 @@
 	</properties>
 
 	<dependencies>
-		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -35,7 +38,9 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-config-server</artifactId>
+			<artifactId>
+				spring-cloud-starter-netflix-eureka-client
+			</artifactId>
 		</dependency>
 	</dependencies>
 
