--- a/cloud-config/src/main/resources/application.properties
+++ b/cloud-config/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 server.port=8888
-spring.cloud.config.server.git.url=D:/repos/.git/
+spring.cloud.config.server.git.uri=file:///D:/repos
+spring.cloud.config.server.git.cloneOnStart=true
