--- a/number-service/pom.xml
+++ b/number-service/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.2.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.citi</groupId>
-	<artifactId>cloud-config</artifactId>
+	<groupId>com.citi.client</groupId>
+	<artifactId>number-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>cloud-config</name>
+	<name>number-service</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -20,7 +20,18 @@
 	</properties>
 
 	<dependencies>
-		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -32,10 +43,6 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-config-server</artifactId>
 		</dependency>
 	</dependencies>
 
